add model, route, controller, validation and unit tests
