# resources/views/tasks.blade.php
@@ -1,0 +1,12 @@
+<!doctype html>
+<html lang="{{ app()->getLocale() }}">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Todo List</title>
+    </head>
+    <body>  
+    </body>
+</html>
